--- a/Analyzing_TV_Data/notebook.ipynb
+++ b/Analyzing_TV_Data/notebook.ipynb
@@ -417,6 +417,7 @@
    ],
    "source": [
     "# Import pandas\n",
+    "import numpy as np \n",
     "import pandas as pd\n",
     "\n",
     "# Load the CSV data into DataFrames\n",
@@ -1477,7 +1478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
